--- a/server/view/member/partial/header.ejs
+++ b/server/view/member/partial/header.ejs
@@ -87,6 +87,20 @@
     padding: 0.25rem 0.4rem;
     border-radius: 10rem;
   }
+
+  .share-link {
+    text-decoration: none;
+    color: #1354a5;
+  }
+  
+  .share-link:hover {
+    font-weight: bolder;
+  }
+
+  .noti-item:active {
+    background-color: #f8f9fa;
+    color: black;
+  }
 </style>
 <div class="container header-block">
   <header class="d-flex flex-wrap align-items-stretch justify-content-md-between border-bottom">
