--- a/server/view/member/trash.ejs
+++ b/server/view/member/trash.ejs
@@ -81,9 +81,14 @@
           <%- include('./partial/left') %>
             <!-- right  -->
             <div class="col-11 d-flex flex-column align-items-start">
-              <div class="d-flex align-items-center justify-content-md-between my-2" style="width: 100%;">
+              <div class="d-flex align-items-center my-2" style="width: 100%;">
                 <div>
                   <h4>Deleted</h4>
+                </div>
+              </div>
+              <div class="d-flex align-items-center mb-2" style="width: 100%;">
+                <div>
+                  <span>You can restore any file deleted in the last 30 days.</span>
                 </div>
               </div>
               <!-- BUTTON  -->
