--- a/server/view/visitor/partial/header.ejs
+++ b/server/view/visitor/partial/header.ejs
@@ -29,7 +29,9 @@
   }
 
   .header-btn:hover {
-    background-color: #f8f5ef;
+    font-weight: bolder;
+    /* background-color: #f8f5ef;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2); */
   }
 
   .header-btn span {
