--- a/server/view/member/links.ejs
+++ b/server/view/member/links.ejs
@@ -25,6 +25,24 @@
         .revoke-btn {
           display: none;
         }
+
+        .custom-operation-btn:hover {
+          background-color: #f8f5ef;
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-custom-yes {
+          background-color: #f8f5ef;
+        }
+
+        .btn-custom-yes:hover {
+          background-color: #f8f5ef;
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-custom-no:hover {
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
       </style>
 </head>
 
@@ -48,7 +66,7 @@
               <div class="col-12 d-flex flex-column align-items-center mt-3">
                 <!-- table  -->
                 <div style="width: 100%;">
-                  <table class="table table-hover" id="links-you-shared-table">
+                  <table class="table" id="links-you-shared-table">
                     <thead class="table-header">
                       <tr>
                         <th scope="col">File / Folder</th>
@@ -65,30 +83,28 @@
         </div>
         <!-- Modal for revoke link  -->
         <div class="modal fade" id="revokeLinkModal" tabindex="-1" aria-labelledby="revokeLinkModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="revokeLinkModalLabel">Revoke Share Link</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div>Are you sure to revoke the link?</div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-primary" id="revoke-link-btn">
-                  <!-- data-bs-toggle="modal" data-bs-target="#revokeAlertModal"> -->
+        aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="revokeLinkModalLabel">Revoke Share Link</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div id="revoke-confirm-q" >Are you sure to revoke the link?</div>
+              <div class="d-flex justify-content-end pt-4">
+                <button type="button" class="btn btn-custom-yes ms-2" id="revoke-link-btn">
                   Yes
                 </button>
-                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                <button type="button" class="btn btn-custom-no ms-2" data-bs-dismiss="modal">
                   No
                 </button>
-
               </div>
             </div>
           </div>
         </div>
-        <!-- Modal for revoke link end  -->
+      </div>
+      <!-- Modal for revoke link end  -->
         <!-- Modal for revoke link alert  -->
         <div class="modal fade" id="revokeAlertModal" tabindex="-1" aria-hidden="true">
           <div class="modal-dialog">
