--- a/server/view/visitor/login.ejs
+++ b/server/view/visitor/login.ejs
@@ -33,7 +33,8 @@
         }
 
         .header-btn:hover {
-          background-color: #f8f5ef;
+          /* background-color: #f8f5ef; */
+          font-weight: bolder;
         }
 
         .header-btn span {
@@ -60,13 +61,13 @@
           color: rgb(141, 141, 141);
         }
 
-        .login-btn {
+        .continue-btn {
           font-size: 1.2vw;
           border: none;
           background-color: #f8f5ef;
         }
 
-        .login-btn:hover {
+        .continue-btn:hover {
           box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
         }
 
@@ -109,9 +110,12 @@
           </a>
         </div>
         <div class="col-md-2 d-flex justify-content-end align-items-end">
-          <div class="header-btn">
+          <!-- <div class="header-btn">
             <a href="/register"><span>Register</span></a>
-          </div>
+          </div> -->
+          <button class="btn header-btn">
+            <a href="/register"><span>Register</span></a>
+          </button>
         </div>
       </header>
     </div>
@@ -159,7 +163,7 @@
                   </div> -->
 
                   <div class="d-flex justify-content-center pt-2 pb-3">
-                    <button type="submit" class="w-100 login-btn py-1">Continue</button>
+                    <button type="submit" class="w-100 continue-btn py-1">Continue</button>
                   </div>
 
                   <div class="d-flex justify-content-center py-1">
