--- a/server/view/visitor/partial/footer.ejs
+++ b/server/view/visitor/partial/footer.ejs
@@ -21,17 +21,29 @@
     margin: 1vh 0;
     padding: 1vh 0;
   }
+
+  div, ul {
+    /* border: 1px dashed; */
+  }
 </style>
 <div class="container w-75 footer-block">
   <footer class="d-flex flex-wrap justify-content-between align-items-center">
     <ul class="nav justify-content-end">
       <li class="nav-item"><a href="/about" class="nav-link px-2">About</a></li>
-      <li class="nav-item"><a href="/info" class="nav-link px-2">Terms and Conditions</a></li>
-      <li class="nav-item"><a href="/info#privacy" class="nav-link px-2">Privacy Policy</a></li>
-      <li class="nav-item"><a href="/info#contact" class="nav-link px-2">Contact</a></li>
+      <li class="nav-item"><a href="/terms" class="nav-link px-2">Terms and Conditions</a></li>
+      <li class="nav-item"><a href="/privacy" class="nav-link px-2">Privacy Policy</a></li>
+      <li class="nav-item"><a href="/contact" class="nav-link px-2">Contact</a></li>
     </ul>
-    <div class="d-flex align-items-center">
-      <div>© 2023 EON Drive</div>
+    
+    <div class="d-flex align-items-end">
+      <div id="github-link" class="mx-3">
+        <a href="https://github.com/wwwxxch/eon-drive" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" width="22" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+          </svg>
+        </a>
+      </div>
+      <div id="copy-right" class="mx-1">© 2023 EON Drive</div>
     </div>
   </footer>
 </div>
