[feat] update FE

--- a/server/view/visitor/privacy.ejs
+++ b/server/view/visitor/privacy.ejs
@@ -34,7 +34,7 @@
         <div class="d-flex flex-column">
           <div id="privacy">
             <div class="item-title">Privacy Policy</div>
-            <div class="px-2">
+            <div>
               <span>We take your privacy seriously. This policy outlines the types of personal information we collect
                 when you use our website, as well as how we use and protect that information.</span>
               <ol>
