--- a/server/view/visitor/register.ejs
+++ b/server/view/visitor/register.ejs
@@ -181,7 +181,7 @@
                   <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input" id="agreeToTerms" required>
                     <label class="form-check-label" for="agreeToTerms">
-                      I agree to the <a href="/info">Terms and Conditions</a>
+                      I agree to the <a href="/terms" target="_blank">Terms and Conditions</a>
                     </label>
                   </div>
 
