--- a/server/view/visitor/terms.ejs
+++ b/server/view/visitor/terms.ejs
@@ -34,7 +34,7 @@
         <div class="d-flex flex-column">
           <div id="terms">
             <div class="item-title">Terms and Conditions</div>
-            <div class="px-2">
+            <div>
               <span>By using this website, you agree to the following terms and conditions:</span>
               <ol>
                 <li><b>User Content:</b> You are solely responsible for any content you upload to our website. You
