--- a/server/view/member/trash.ejs
+++ b/server/view/member/trash.ejs
@@ -125,7 +125,7 @@
         </div>
         <!-- Modal for confirm restore  -->
         <div class="modal fade" id="confirmRestoreModal" tabindex="-1" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-body">
                 <div class="pt-3">
@@ -146,7 +146,7 @@
         <!-- Modal for confirm restore  -->
         <!-- Modal for confirm perm delete  -->
         <div class="modal fade" id="confirmPermDeleteModal" tabindex="-1" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-body">
                 <div id="confirm-perm-delete-msg" class="fs-5 text-wrap confirm-msg"></div>
