--- a/server/view/visitor/contact.ejs
+++ b/server/view/visitor/contact.ejs
@@ -15,11 +15,18 @@
           font-weight: 600;
         }
 
-        span,
-        li {
-          line-height: 2.5;
+        .description-text {
+          font-size: 1.1rem;
+          line-height: 35px;
         }
-
+        .description-text a {
+          text-decoration: none;
+          color: black;
+        }
+        .description-text a:hover {
+          text-decoration: underline;
+          color: #519cf6
+        }
         div {
           /* border: 1px dashed; */
         }
@@ -33,17 +40,47 @@
       <div class="w-75 container content-block d-flex align-items-center mb-5">
         <div class="d-flex flex-column">
           <div id="terms">
-          
-          <div id="contact">
-            <div class="item-title">Contact</div>
-            <div class="px-2">
-              <span></span>
+
+            <div id="contact">
+              <div class="item-title">Contact</div>
+              <div class="my-3 description-text">
+                <div>
+                  Thank you for visiting my website &#x1F642; !
+                </div>
+                <div>
+                  If you have any questions, suggestions, or comments, please do not hesitate to contact me.
+                </div>
+                <div class="d-flex justify-content-start align-items-center my-3">
+                  <div class="me-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="25" fill="currentColor" class="bi bi-envelope"
+                      viewBox="0 0 16 16">
+                      <path
+                        d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+                    </svg>
+                  </div>
+                  <div>
+                    <a href="mailto: chihhui.x@gmail.com">chihhui.x@gmail.com</a>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-start align-items-center my-3">
+                  <div class="me-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="25" fill="currentColor" class="bi bi-github"
+                      viewBox="0 0 16 16">
+                      <path
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                    </svg>
+                  </div>
+                  <div>
+                    <a href="https://github.com/wwwxxch/eon-drive"
+                      target="_blank">https://github.com/wwwxxch/eon-drive</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+        <%- include('./partial/footer') %>
       </div>
-      <%- include('./partial/footer') %>
-  </div>
 </body>
 
 </html>
