[chore] adjust FE

--- a/server/view/visitor/contact.ejs
+++ b/server/view/visitor/contact.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EON Drive</title>
+  <title>EON Drive - Contact</title>
   <%- include('./partial/stylesheet') %>
     <%- include('./partial/script') %>
 
@@ -19,14 +19,17 @@
           font-size: 1.1rem;
           line-height: 35px;
         }
+
         .description-text a {
           text-decoration: none;
           color: black;
         }
+
         .description-text a:hover {
           text-decoration: underline;
           color: #519cf6
         }
+
         div {
           /* border: 1px dashed; */
         }
@@ -79,8 +82,9 @@
             </div>
           </div>
         </div>
-        <%- include('./partial/footer') %>
       </div>
+      <%- include('./partial/footer') %>
+  </div>
 </body>
 
 </html>
