--- a/server/view/visitor/view_folder.ejs
+++ b/server/view/visitor/view_folder.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EON Drive</title>
+  <title><%= name %> - EON Drive</title>
   <%- include('./partial/stylesheet') %>
     <%- include('./partial/script') %>
 
