[feat] FE - Update formatTime function, fix popstate bug

--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -363,6 +363,9 @@
                   </table>
                 </div>
               </div>
+              <!-- <div class="d-flex align-items-center">
+                <div id="no-data"></div>
+              </div> -->
               <!-- Modal for get link  -->
               <div class="modal fade" id="getLinkModal" tabindex="-1" aria-labelledby="getLinkModalLabel"
                 aria-hidden="true">
