--- a/server/view/visitor/view_folder.ejs
+++ b/server/view/visitor/view_folder.ejs
@@ -55,7 +55,7 @@
     <%- include('./partial/header') %>
       <!-- Main Body  -->
       <div class="container content-block">
-        <div id="share-path" class="d-flex align-items-center py-2">
+        <div id="share-path" class="d-flex align-items-center py-2" data-target-name="<%= name %>">
           <a href="/view/fo/<%= shareToken %>">
             <h3>
               <span class="path-text">
