[feat] adjust FE layout

--- a/server/view/member/about.ejs
+++ b/server/view/member/about.ejs
@@ -24,8 +24,8 @@
           margin: 1.5vh 0;
         }
 
-        span,
-        li {
+        .description-text span,
+        .description-text li {
           line-height: 2.5;
         }
 
@@ -551,6 +551,8 @@
       </div>
       <%- include('./partial/footer') %>
   </div>
+  <script src="/socket.io/socket.io.js"></script>
+  <script type="module" src="/js/pages/member/header.js"></script>
 </body>
 
 </html>
