--- a/server/view/member/partial/header.ejs
+++ b/server/view/member/partial/header.ejs
@@ -102,7 +102,7 @@
     color: black;
   }
 </style>
-<div class="container header-block">
+<div class="container header-block w-100">
   <header class="d-flex flex-wrap align-items-stretch justify-content-md-between border-bottom">
     <!-- left  -->
     <div class="col-md-3 mb-2 mb-md-0">
