--- a/server/view/member/view_folder.ejs
+++ b/server/view/member/view_folder.ejs
@@ -43,7 +43,6 @@
         #waiting-spinner svg {
           transform: scale(3);
         }
-
         @media screen and (max-width: 1500px) {
           .content-block {
             width: 68vw;
@@ -121,7 +120,8 @@
       </div>
       <%- include('./partial/footer') %>
   </div>
-
+  <script src="/socket.io/socket.io.js"></script>
+  <script type="module" src="/js/pages/member/header.js"></script>
   <script type="module" src="/js/pages/visitor/view_folder.js"></script>
 </body>
 
