--- a/server/view/visitor/partial/footer.ejs
+++ b/server/view/visitor/partial/footer.ejs
@@ -22,11 +22,15 @@
     padding: 1vh 0;
   }
 
+  footer li {
+    line-height: 2.5;
+  }
+
   div, ul {
     /* border: 1px dashed; */
   }
 </style>
-<div class="container w-75 footer-block">
+<div class="container footer-block">
   <footer class="d-flex flex-wrap justify-content-between align-items-center">
     <ul class="nav justify-content-end">
       <li class="nav-item"><a href="/about" class="nav-link px-2">About</a></li>
