--- a/server/view/visitor/partial/header.ejs
+++ b/server/view/visitor/partial/header.ejs
@@ -36,6 +36,7 @@
 
   .header-btn span {
     font-size: 1.3vw;
+    line-height: 2.5;
   }
   
   .header-block {
@@ -54,7 +55,7 @@
   }
 
 </style>
-<div class="container w-75 header-block">
+<div class="container header-block">
   <header class="d-flex flex-wrap align-items-stretch justify-content-md-between border-bottom">
     <div class="col-md-3 mb-2 mb-md-0">
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
