--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -259,7 +259,7 @@
   <div id="root">
     <%- include('./partial/header') %>
       <!-- main block start -->
-      <div class="container content-block">
+      <div class="container content-block w-100">
         <div class="row">
           <!-- left  -->
           <%- include('./partial/left') %>
