--- a/server/view/member/partial/footer.ejs
+++ b/server/view/member/partial/footer.ejs
@@ -21,8 +21,16 @@
     margin: 1vh 0;
     padding: 1vh 0;
   }
+
+  footer li {
+    line-height: 2.5;
+  }
+
+  div, ul {
+    /* border: 1px dashed; */
+  }
 </style>
-<div class="container w-100 footer-block">
+<div class="container footer-block">
   <footer class="d-flex flex-wrap justify-content-between align-items-center">
     <ul class="nav justify-content-end">
       <li class="nav-item"><a href="/about" class="nav-link px-2">About</a></li>
@@ -30,6 +38,7 @@
       <li class="nav-item"><a href="/privacy" class="nav-link px-2">Privacy Policy</a></li>
       <li class="nav-item"><a href="/contact" class="nav-link px-2">Contact</a></li>
     </ul>
+    
     <div class="d-flex align-items-end">
       <div id="github-link" class="mx-3">
         <a href="https://github.com/wwwxxch/eon-drive" target="_blank">
