--- a/server/view/member/view_file.ejs
+++ b/server/view/member/view_file.ejs
@@ -4,35 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title><%= name %> - EON Drive</title>
+  <title>
+    <%= name %> - EON Drive
+  </title>
   <%- include('./partial/stylesheet') %>
     <%- include('./partial/script') %>
-
-      <!-- css internal -->
       <style>
-        .ff-row:hover .individual-dl-btn {
-          display: block;
+        div {
+          /* border: 1px dashed; */
         }
 
-        .individual-dl-btn {
-          display: none;
+        .content {
+          width: 50vw;
+          padding-left: 5vw;
         }
 
         .custom-operation-btn {
           background-color: #f8f5ef;
         }
+
         .custom-operation-btn:hover {
           background-color: #f8f5ef;
           box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .folder {
-          cursor: pointer;
-        }
-
-        .slash {
-          padding: 0 10px;
-          font-size: 24px;
         }
 
         .spinner-border {
@@ -43,12 +36,6 @@
         #waiting-spinner svg {
           transform: scale(3);
         }
-
-        @media screen and (max-width: 1500px) {
-          .content-block {
-            width: 68vw;
-          }
-        }
       </style>
 </head>
 
@@ -56,39 +43,42 @@
   <div id="root">
     <%- include('./partial/header') %>
       <!-- Main Body  -->
-      <div class="container content-block">
-        <div id="share-path" class="d-flex align-items-center py-2" data-target-name="<%= name %>">
-          <a href="/view/fo/<%= shareToken %>">
-            <h3>
-              <span class="path-text">
-                <%= name %>
-              </span>
-            </h3>
-          </a>
-        </div>
-        <!-- Button  -->
-        <div style="width: 100%; height: 50px;" class="d-flex align-items-center justify-content-between my-2">
-          <div class="d-flex align-items-center">
-            <div>
-              <button type="button" class="btn custom-operation-btn fo-dl-btn">
-                Download
-              </button>
-            </div>
-          </div>
-        </div>
+      <div class="container content-block d-flex flex-column align-items-center">
         <div>
-          <!-- Table  -->
-          <div style="width: 100%;">
-            <table class="table" id="fo-list-table">
-              <thead id="fo-list-thaed">
-                <tr>
-                  <th scope="col">Name</th>
-                  <th scope="col">Modified</th>
-                </tr>
-              </thead>
-              <tbody id="fo-list-tbody">
-              </tbody>
-            </table>
+          <h3 class="file-name">
+            <%= name %>
+          </h3>
+        </div>
+        <div class="content">
+          <div class="row pt-4 d-flex justify-content-center">
+            <div class="col-2 d-flex flex-column justify-content-center">
+              <p>Size:</p>
+              <p>Modified:</p>
+              <p>Owner:</p>
+            </div>
+            <div class="col-5 d-flex flex-column justify-content-center">
+              <p>
+                <% if (size < 1024) { %>
+                  <%= size %> bytes
+                <% } else if (size < 1024 * 1024) { %>
+                  <%= Math.round(size / 1024 * 100) / 100 %> KB
+                <% } else if (size < 1024 * 1024 * 1024) { %>
+                  <%= Math.round(size / (1024 * 1024) * 100) / 100 %> MB
+                <% } else if (size < 1024 * 1024 * 1024 * 1024) { %>
+                  <%= Math.round(size / (1024 * 1024 * 1024) * 100) / 100 %> GB
+                <% } %>
+              </p>
+              <p>
+                <% const dateTime=DateTime.fromISO(updated_at).setZone(clientTimeZone); %>
+                  <%= dateTime.toFormat('yyyy-MM-dd HH:mm:ss') %>
+              </p>
+              <p>
+                <%= owner %>
+              </p>
+            </div>
+            <div class="col-3 d-flex align-items-center">
+              <button type="button" class="btn fi-dl-btn custom-operation-btn">Download</button>
+            </div>
           </div>
         </div>
         <!-- Modal for waiting -->
@@ -121,8 +111,9 @@
       </div>
       <%- include('./partial/footer') %>
   </div>
-
-  <script type="module" src="/js/pages/visitor/view_folder.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script type="module" src="/js/pages/member/header.js"></script>
+  <script type="module" src="/js/pages/visitor/view_file.js"></script>
 </body>
 
 </html>
